--- a/objectives.html
+++ b/objectives.html
@@ -22,7 +22,7 @@
             <h1>Objetivos</h1>
             <p>Ingressar em uma faculdade de Engenharia da Computação</p>
             <p>Trabalhar com desenvolvimento de aplicações</p>
-            <p>Morar fora do Brail</p>
+            <p>Morar fora do Brasil</p>
         </div>
     </div>
 </body>
